kube/api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api
  name: api
  namespace: back
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: api
  type: ClusterIP
status:
  loadBalancer: {}
