kube/api/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api
  namespace: back
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
    - Ingress
    - Egress
  ingress: 
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: webapp
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: db
  - ports:
    - port: 53
      protocol: UDP
